--- a/BTL/app/src/main/AndroidManifest.xml
+++ b/BTL/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:theme="@style/Theme.BTL"
         tools:targetApi="31">
         <activity
-            android:name=".RegisterCourseActivity"
+            android:name=".ui.appplication.RegisterCourseActivity"
             android:exported="false" />
         <activity
-            android:name=".CarCareInfoActivity"
+            android:name=".ui.appplication.CarCareInfoActivity"
             android:exported="false" />
         <activity
-            android:name=".LicenseManagementActivity"
+            android:name=".ui.appplication.LicenseManagementActivity"
             android:exported="false" /> <!-- Đăng ký LoginActivity -->
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.appplication.MainActivity"
             android:exported="true"
             android:label="Login" />
         <activity
