--- a/BTL/app/src/main/AndroidManifest.xml
+++ b/BTL/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.BTL"
         tools:targetApi="31">
         <activity
+            android:name=".ui.appplication.PaymentActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.appplication.RegisterCourseActivity"
             android:exported="false" />
         <activity
