--- a/backend/carcare/src/main/resources/application.properties
+++ b/backend/carcare/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=carcare
+
+spring.datasource.url=jdbc:mysql://localhost:3306/carcaredb
+spring.datasource.username=haianh
+spring.datasource.password=haianh123
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
